export contact to vcard format
