# internal/contacts/adapters/graphql/schema.resolvers.go
@@ -5,7 +5,9 @@ package graphql
 // Code generated by github.com/99designs/gqlgen version v0.17.35
 
 import (
+	"bytes"
 	"context"
+	"fmt"
 
 	"github.com/davidterranova/contacts/internal/contacts/adapters/graphql/model"
 	"github.com/davidterranova/contacts/internal/contacts/usecase"
@@ -88,14 +90,33 @@ func (r *queryResolver) ListContacts(ctx context.Context) ([]*model.Contact, err
 		return nil, auth.ErrUnauthorized
 	}
 
-	contacts, err := r.app.ListContacts(ctx, usecase.QueryListContact{
-		User: user,
-	})
+	contacts, err := r.app.ListContacts(ctx, user)
 	if err != nil {
 		return nil, err
 	}
 
 	return toGQLContacts(contacts), nil
+}
+
+func (r *queryResolver) ExportContact(ctx context.Context, id string) ([]byte, error) {
+	user, err := auth.UserFromContext(ctx)
+	if err != nil {
+		log.Ctx(ctx).Warn().Err(err).Msg("user_contacts:list failed to get user from context")
+		return nil, auth.ErrUnauthorized
+	}
+
+	writer, err := r.app.ExportContact(ctx, usecase.CmdExportContact{ContactId: id}, user)
+	if err != nil {
+		return nil, err
+	}
+
+	buf := new(bytes.Buffer)
+	_, err = fmt.Fprint(writer, buf)
+	if err != nil {
+		return nil, err
+	}
+
+	return buf.Bytes(), nil
 }
 
 // Mutation returns MutationResolver implementation.
